--- a/app/views/charities/_form.html.erb
+++ b/app/views/charities/_form.html.erb
@@ -2,5 +2,6 @@
   <%= f.text_field :name, placeholder: "Name of charity" %><br />
   <%= f.text_field :link, placeholder: "URL" %><br />
   <%= f.text_area :mission, placeholder: "Mission Statement" %><br />
+  <%= f.number_field :zipcode, placeholder: "Zipcode" %><br />
   <%= f.submit "Submit" %>
 <% end %>
