--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,19 @@
-<header class="header">
+<section class="home-index">
 	<%= form_tag results_path, { :class => "header-form clearfix", :method => :get } do %>
 		<%= text_field_tag "category", nil, { placeholder: "What is your passion?", class: "header-input" } %>
 		<%= hidden_field_tag "zip", nil, { data: { bind: "value: postalCode" } } %>
 		<%= submit_tag "Go", :class => "header-submit" %>
 	<% end %>
 
-	<p>
-		Or <%= link_to "View Charities", charities_path %>
-	</p>
-	
+	<p>Or <%= link_to "View Charities", charities_path %></p>
+
 	<p data-bind="visible: canDetectLocation()">Location: <a href="" data-bind="click: detectLocation, text: location() ? location : 'Auto Detect'"></a></p>
-</header>
+</section>
+
 
 <script>
+	// this should really be in an external file...
+
 	var viewModel = {
 		canDetectLocation: ko.observable(false),
 		detectLocation: detectLocation,
