--- a/app/views/home/results.html.erb
+++ b/app/views/home/results.html.erb
@@ -1,6 +1,4 @@
-<p>
-  Here are the most relevant matches within zipcode <%= @zipcode %> ± 100:
-</p>
+<p>Here are the most relevant matches within zipcode <%= @zipcode %> ± 100:</p>
 
 <% @top_charities.each do |x| %>
   <div class="charity">
@@ -17,4 +15,4 @@
       <%= x.mission %>
     </p>
   </div>
-<% end %> 
+<% end %>
