--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,7 @@
  *= require_tree .
  */
 
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:700|Open+Sans:400,600);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:700|Open+Sans:400,600,700);
 
 *, *:before, *:after {
 	-moz-box-sizing: border-box;
@@ -20,14 +20,44 @@
 }
 
 body {
+  background: #f3f3f3;
 	font-family: 'Open Sans', sans-serif;
-	padding: 1em;
 }
+
+.container {
+  margin: 0 auto;
+  max-width: 50em;
+}
+
+.alert {
+  background: rgb(244, 248, 200);
+  border-bottom: 1px solid #CACACA;
+  font-size: 0.9em;
+  font-weight: 700;
+  padding: 0.5em 1em;
+  text-align: center;
+}
+
+.page-title {
+  font-size: 1.3em;
+  font-weight: 700;
+}
+
+.account-actions {
+  background: #fff;
+  border-bottom: 1px solid #ddd;
+  color: #ccc;
+  font-size: 0.9em;
+  text-align: right;
+  padding: 0.8em 1.5em;
+}
+
 
 .header-logo {
 	color: #565656;
 	font-family: 'Roboto Slab', serif;
 	font-size: 2.9em;
+  text-align: center;
 
 	a {
 		color: #565656;
