Fix all cucumber and rspec tests. Final edits

--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -6,4 +6,5 @@
   <li><strong>Zip code:</strong> <%= @charity.zipcode %></li>
 </ul>
 
+<%= link_to "Edit charity", edit_charity_path(@charity) %> <br />
 <%= link_to "Back to Charities", charities_path %>
